--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "Ping a lazymention server",
   "main": "index.js",
   "dependencies": {
+    "coveralls": "^3.0.0",
     "fancy-log": "^1.3.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "perjury": "^1.1.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
