--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "fancy-log": "^1.3.2"
   },
   "devDependencies": {
+    "nyc": "^11.4.1",
     "perjury": "^1.1.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "nyc -r lcov -r text perjury test.js"
   },
   "repository": {
     "type": "git",
