--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "fancy-log": "^1.3.2"
   },
   "devDependencies": {
+    "concat-stream": "^1.6.2",
     "coveralls": "^3.0.1",
     "nyc": "^11.4.1",
     "perjury": "^1.1.0"
