Override (some) Greenkeeper commit messages
Lockfile update messages are missing; see
greenkeeperio/greenkeeper#1009.

--- a/package.json
+++ b/package.json
@@ -32,5 +32,9 @@
   "homepage": "https://github.com/strugee/ping-lazymention#readme",
   "engine": {
     "node": ">=6"
+  },
+  "greenkeeper": {
+    "dependencyUpdate": "Bump to ${dependency}@${version}",
+    "devDependencyUpdate": "Bump to ${dependency}@${version}"
   }
 }
