--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "concat-stream": "^2.0.0",
     "coveralls": "^3.0.1",
     "nyc": "^15.1.0",
-    "perjury": "^1.1.0"
+    "vows": "^1.0.0-alpha.1"
   },
   "scripts": {
-    "test": "nyc -r lcov -r text perjury test.js"
+    "test": "nyc -r lcov -r text vows test.js"
   },
   "repository": {
     "type": "git",
